--- a/theme/styles/index.less
+++ b/theme/styles/index.less
@@ -11,3 +11,6 @@
 @import "application.less";
 @import "article.less";
 @import "syntax.less";
+
+/* components */
+@import "../components/NotFound/index.less";
