--- a/theme/styles/index.less
+++ b/theme/styles/index.less
@@ -1,4 +1,4 @@
-@import "~yiqilaiui/lib/index.less";
+@import "~teasim/lib/index.less";
 
 @color-primary                : #3A3A39;
 @color-secondary              : #C2D435;
