--- a/index.css
+++ b/index.css
@@ -2027,7 +2027,7 @@ article li > p {
     white-space: nowrap !important;
   }
 }
-/* weight */
+/* font-weight */
 .font-light {
   font-weight: 300 !important;
 }
@@ -2037,7 +2037,7 @@ article li > p {
 .font-bold {
   font-weight: 600 !important;
 }
-/* family */
+/* font-family */
 .font-sans,
 .font-sans * {
   font-family: 'IBM Plex Sans', 'Chinese Quote', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
@@ -2050,38 +2050,46 @@ article li > p {
 .font-mono * {
   font-family: 'IBM Plex Mono', 'Consolas', 'Liberation Mono', 'Menlo', 'Courier', 'monospace' !important;
 }
-/* size */
+/* font-size */
 .font-tiny {
-  line-height: 1;
   font-size: 0.75rem;
+  line-height: 1.25rem;
 }
 .font-mini {
-  line-height: 1;
   font-size: 0.875rem;
+  line-height: 1.375rem;
 }
 .font-small {
-  line-height: 1;
   font-size: 1rem;
+  line-height: 1.5rem;
 }
 .font-medium {
-  line-height: 1;
   font-size: 1.125rem;
+  line-height: 1.625rem;
 }
 .font-large {
-  line-height: 1;
   font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .font-huge {
-  line-height: 1;
   font-size: 1.5rem;
+  line-height: 2rem;
 }
 .font-wide {
-  line-height: 1;
   font-size: 1.75rem;
+  line-height: 2.25rem;
 }
 .list-none {
   list-style: none !important;
   padding-left: 0;
+}
+.list-circle {
+  list-style: circle;
+  padding-left: 1rem;
+}
+.list-square {
+  list-style: square;
+  padding-left: 1rem;
 }
 .link-none {
   color: rgba(0, 0, 0, 0.65);
@@ -5320,7 +5328,6 @@ article li > p {
   content: "";
 }
 .is-absolute {
-  display: block;
   position: absolute;
   top: 0;
   left: 0;
